webpage icon added to working files folder

--- a/Working files/Working file.html
+++ b/Working files/Working file.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Ahmed Shamin">
+    <meta name="description" content="This page contains all the things I am learining as I learn HTML">
     <title>My First Web Page</title>
+    <link rel="icon" href="" type="image/x-icon">
     <style>
         html {
             font-size: 22px;
