Indents and Line breaks
Completed up to Chapter 3. 49:50

--- a/Working files/Index.html
+++ b/Working files/Index.html
@@ -20,24 +20,32 @@
 
     <h3>My Daily Schedule</h3>
     <p>Let me tell you how I:
-        <br>... I learn more about web dev.
-        <br>... I plan out my schedule.
-        <br>... I use resources from MDN.
+        <br>&nbsp;&nbsp;&nbsp;... I learn more about web dev.
+        <br>&nbsp;&nbsp;&nbsp;... I plan out my schedule.
+        <br>&nbsp;&nbsp;&nbsp;... I use resources from <abbr title="Mozilla Developer Network">MDN.</abbr>
     </p>
 
     <hr>
 
     <h2>I am also Planning a Vacation</h2>
     <p>I've been working hard and <em>really need a getaway</em>.</p>
-    <p>I live in KS so I want to visit a beach.</p>
+    <p>I live in <abbr title="Maldives">MDV</abbr> so I want to visit a beach.</p>
 
     <h3>Places I like to visit</h3>
     <p>I heard good things about the Caribbean</p>
+    <p>I've heard good things about going here:</p>
+    <address>
+        Margaritaville Island Reserve Riviera Cancun<br>
+        Blvd. Kukulcan, Km. 13.5, No. 30, Seccion A Segunda Etapa, Zona<br> Htl., 77500 Cancun, Q.R., Mexico 
+    </address>
 
+    <!-- TODO: Add more places -->
     <h3>Places I want to Avoid</h3>
     <p>Anywhere cold. <strong>No Way!</strong>
     </p>
 
+    <hr>
+    &lt;&lt;&lt; &copy; Ahmed Shamin &gt;&gt;&gt;
 </body>
 
 </html>
