--- a/Working files/Index.html
+++ b/Working files/Index.html
@@ -11,41 +11,75 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <h1>My Goals for the year</h1>
 
     <hr>
 
+    <nav>
+        <ul>
+            <li>
+                <a href="#html">Learning HTML</a>
+            </li>
+            <li>
+                <a href="#vacation">Planning a vacation</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
+    <section id="html">
     <h2>I'm ready to learn HTML</h2>
     <p>This is my first web page.</p>
 
     <h3>My Daily Schedule</h3>
-    <p>Let me tell you how I:
-        <br>&nbsp;&nbsp;&nbsp;... I learn more about web dev.
-        <br>&nbsp;&nbsp;&nbsp;... I plan out my schedule.
-        <br>&nbsp;&nbsp;&nbsp;... I use resources from <abbr title="Mozilla Developer Network">MDN.</abbr>
-    </p>
+    <p>Let me tell you how I:</p>
+        <ol>
+        <li>... I learn more about web dev.</li>
+        <li>... I plan out my schedule.</li>
+        <li>... I use resources from <abbr title="Mozilla Developer Network">
+                <a href="https://developer.mozilla.org/">MDN</a>
+            </abbr></li>
+        </ol>
+    </section>
 
     <hr>
-
+    <section id="vacation">
     <h2>I am also Planning a Vacation</h2>
     <p>I've been working hard and <em>really need a getaway</em>.</p>
     <p>I live in <abbr title="Maldives">MDV</abbr> so I want to visit a beach.</p>
 
     <h3>Places I like to visit</h3>
-    <p>I heard good things about the Caribbean</p>
-    <p>I've heard good things about going here:</p>
-    <address>
-        Margaritaville Island Reserve Riviera Cancun<br>
-        Blvd. Kukulcan, Km. 13.5, No. 30, Seccion A Segunda Etapa, Zona<br> Htl., 77500 Cancun, Q.R., Mexico 
-    </address>
-
+    <ul>
+        <li>
+            <p>I heard good things about the Caribbean</p>
+        </li>
+        <li>
+            <p>I've heard good things about going here:</p>
+            <address>
+                Margaritaville Island Reserve Riviera Cancun<br>
+                Blvd. Kukulcan, Km. 13.5, No. 30, Seccion A Segunda Etapa, Zona<br> Htl., 77500 Cancun, Q.R., Mexico 
+            </address>
+        </li>
+    </ul>
     <!-- TODO: Add more places -->
     <h3>Places I want to Avoid</h3>
-    <p>Anywhere cold. <strong>No Way!</strong>
-    </p>
+    <dl>
+        <dt>North Pole</dt>
+        <dd>I hear this is <strong>cold!</strong></dd>
+
+        <dt>South Pole</dt>
+        <dd>This is also cold</dd>
+
+        <dt>Mountain Tops</dt>
+        <dd>These are also cold.</dd>
+    </dl>
+    </section>
 
     <hr>
-    &lt;&lt;&lt; &copy; Ahmed Shamin &gt;&gt;&gt;
+    &lt;&lt;&lt; &copy; <a href="about.html">Ahmed Shamin</a> &gt;&gt;&gt;
+    <p>
+        <a href="#">Back to Top</a>
+    </p>
 </body>
 
 </html>
