--- a/Working files/Index.html
+++ b/Working files/Index.html
@@ -30,7 +30,13 @@
     <section id="html">
     <h2>I'm ready to learn HTML</h2>
     <p>This is my first web page.</p>
-
+    <img src="img/html_logo_300x300.png" alt="HTML5 Logo" title="I am learning HTML5" width="300" height="300">
+        <figure>
+            <figcaption>An example of HTML 5 Code</figcaption>
+            <p>
+                <code>&lt;h1&gt;Hello World!&lt;/h1&gt;</code>
+            </p>
+        </figure>
     <h3>My Daily Schedule</h3>
     <p>Let me tell you how I:</p>
         <ol>
@@ -43,6 +49,7 @@
     </section>
 
     <hr>
+
     <section id="vacation">
     <h2>I am also Planning a Vacation</h2>
     <p>I've been working hard and <em>really need a getaway</em>.</p>
@@ -52,6 +59,12 @@
     <ul>
         <li>
             <p>I heard good things about the Caribbean</p>
+            <figure>
+            <img src="img/caribbean.jpg" alt="Caribbean beach" title="I want to visit a caribbean beach" width="400" height="225" loading="lazy">
+            <figcaption>
+                Cribbean Beach Getaway
+            </figcaption>
+            </figure>
         </li>
         <li>
             <p>I've heard good things about going here:</p>
@@ -59,6 +72,12 @@
                 Margaritaville Island Reserve Riviera Cancun<br>
                 Blvd. Kukulcan, Km. 13.5, No. 30, Seccion A Segunda Etapa, Zona<br> Htl., 77500 Cancun, Q.R., Mexico 
             </address>
+            <figure>
+                <img src="img/vacation.jpg" alt="Cancun Vacation" title="It's 5 O'Clock Somewhere!" width="400" height="267" loading="lazy">
+                <figcaption>
+                    A caribbean Vacation Image
+                </figcaption>
+            </figure>
         </li>
     </ul>
     <!-- TODO: Add more places -->
