--- a/Working files/Index.html
+++ b/Working files/Index.html
@@ -23,6 +23,9 @@
           <li>
             <a href="#vacation">Planning a vacation</a>
           </li>
+          <li>
+            <a href="#contact">Contact Me</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -197,6 +200,166 @@
             <dd>These are also cold.</dd>
           </dl>
         </section>
+      </article>
+
+      <hr />
+
+      <article id="contact">
+        <h2>Contact Me</h2>
+        <p>I'd really like to hear from you</p>
+
+        <form action="https://httpbin.org/get" method="get">
+          <fieldset>
+            <legend>Personal Info</legend>
+            <p>
+              <label for="firstname">First Name:</label>
+              <input
+                type="text"
+                id="firstname"
+                name="firstname"
+                placeholder="Jane"
+                autocomplete="on"
+                required
+                autofocus
+              />
+            </p>
+            <p>
+              <label for="lastname">Last Name:</label>
+              <input
+                type="text"
+                id="lastname"
+                name="lastname"
+                placeholder="Doe"
+                autocomplete="on"
+                required
+              />
+            </p>
+            <p>
+              <label for="password">Password:</label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Your Secret"
+                required
+              />
+            </p>
+            <p>
+              <label for="phone">Phone:</label>
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                placeholder="5555555555"
+                pattern="[0-9]{3}[0-9]{3}[0-9]{4}"
+                required
+              />
+            </p>
+            <p>
+              <label for="decade">Favorite Decade:</label>
+              <input
+                type="number"
+                id="decade"
+                name="decade"
+                min="1950"
+                max="2020"
+                step="10"
+                value="1980"
+              />
+            </p>
+            <p>
+              <label for="coffee">Favorite coffee:</label>
+              <select id="coffee" name="coffee" multiple size="5">
+                <optgroup label="Coffees">
+                  <option value="regular coffee">Regular Coffee</option>
+                  <option value="latte">Latte</option>
+                </optgroup>
+                <optgroup label="Espresso Drinks">
+                  <option value="cappuccino">Cappuccino</option>
+                  <option value="mocha">Mocha</option>
+                  <option value="americano">Americano</option>
+                </optgroup>
+                <option value="other">Other</option>
+              </select>
+            </p>
+            <!-- <p>
+            <label for="coffee">Favorite Coffee:</label>
+              <input type="text" name="coffee" id="coffee" list="coffee-list" />
+                <datalist id="coffee-list">
+                  <option value="coffee">
+                  <option value="latte">
+                  <option value="espresso">
+                  <option value="cortado">
+                  <option value="americano">
+                  <option value="other">
+                </datalist>
+            </label>
+          </p> -->
+          </fieldset>
+          <br />
+          <fieldset>
+            <legend>What is your favorite food?</legend>
+            <p>
+              <input type="radio" id="tacos" name="food" value="tacos" />
+              <label for="tacos">Tacos</label>
+            </p>
+            <p>
+              <input type="radio" id="pizza" name="food" value="pizza" />
+              <label for="pizza">Pizza</label>
+            </p>
+            <p>
+              <input type="radio" id="other" name="food" value="other" />
+              <label for="other">Other</label>
+            </p>
+          </fieldset>
+          <br />
+          <fieldset>
+            <legend>Do you have Pets?</legend>
+            <p>
+              <input type="checkbox" id="dog" name="pets" value="dog" />
+              <label for="dog">Dog</label>
+            </p>
+            <p>
+              <input type="checkbox" id="cat" name="pets" value="cat" />
+              <label for="cat">Cat</label>
+            </p>
+            <p>
+              <input type="checkbox" id="fish" name="pets" value="fish" />
+              <label for="fish">Fish</label>
+            </p>
+            <p>
+              <input
+                type="checkbox"
+                id="otherpet"
+                name="pets"
+                value="otherpet"
+              />
+              <label for="otherpet">Otherpet</label>
+            </p>
+          </fieldset>
+          <fieldset>
+            <legend>Send me a note</legend>
+            <label for="message">Your Message</label>
+            <br />
+            <textarea
+              id="message"
+              name="message"
+              rows="10"
+              cols="30"
+              placeholder="Type your message here..."
+            ></textarea>
+          </fieldset>
+          <br />
+          <button type="submit">Submit</button>
+          <button
+            type="submit"
+            formaction="https://httpbin.org/post"
+            formmethod="post"
+          >
+            Post
+          </button>
+          <button type="reset">Reset</button>
+        </form>
       </article>
     </main>
     <hr />
