--- a/html_course-main/10_lesson_starter/contact.html
+++ b/html_course-main/10_lesson_starter/contact.html
@@ -6,44 +6,87 @@
     <meta name="author" content="Ahmed Shamin" />
     <title>The Little Taco Shop</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="main.css" type="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
-      <h1>The Little Taco Shop</h1>
+      <h1>Contact Us</h1>
       <nav>
         <ul>
           <li>
-            <a href="#about"
-              >About <abbr title="The Little Taco Shop">LTS</abbr></a
-            >
+            <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="#menu">Our Menu</a>
+            <a href="/#about">About LTS</a>
+          </li>
+          <li>
+            <a href="/#menu">Our Menu</a>
           </li>
           <li>
             <a href="hours.html">Store Hours</a>
-          </li>
-          <li>
-            <a href="contact.html">Contact Us</a>
           </li>
         </ul>
       </nav>
 
       <figure>
         <img
-          src="img/tacos_and_drink_400x267.png"
-          alt="Tacos and a drink"
+          src="img/tacos_close_up_400x260.png"
+          alt="Little Taco Shop Tacos"
           title="We love tacos!"
           width="400"
-          height="267"
+          height="260"
         />
-        <figcaption>Tacos and a drink</figcaption>
+        <figcaption>Little Taco Shop Tacos</figcaption>
       </figure>
     </header>
     <main>
-      <!-- our content-->
+      <section>
+        <h2>Our Contact Form</h2>
+        <form action="https://httpbin.org/get" method="get">
+          <fieldset>
+            <legend>Send us a message</legend>
+            <p>
+              <label for="name">Name:</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Your Name"
+              />
+            </p>
+            <p>
+              <label for="email">Email:</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Your Email Address"
+              />
+            </p>
+            <p>
+              <label for="message">Your Message:</label>
+              <br />
+              <textarea
+                id="message"
+                name="message"
+                rows="8"
+                cols="50"
+                placeholder="Type your message here..."
+              ></textarea>
+            </p>
+          </fieldset>
+          <button type="submit">Send</button>
+          <button type="reset">Reset</button>
+        </form>
+      </section>
+      <article>
+        <h2>Our Location</h2>
+        <address>
+          <p>555 Taco Temptation Lane, Suite T <br />Taco Town, TX 12345</p>
+          <p>Phone: <a href="tel:+15555555555">+1 (555) 555-5555</a></p>
+        </address>
+      </article>
     </main>
     <hr />
     <footer>
