--- a/html_course-main/10_lesson_starter/hours.html
+++ b/html_course-main/10_lesson_starter/hours.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ahmed Shamin" />
-    <title>The Little Taco Shop</title>
+    <title>LTS Hours</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="main.css" type="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
-      <h1>The Little Taco Shop</h1>
+      <h1>Little Taco Shop Hours</h1>
       <nav>
         <ul>
           <li>
-            <a href="#about"
-              >About <abbr title="The Little Taco Shop">LTS</abbr></a
-            >
+            <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="#menu">Our Menu</a>
+            <a href="/#about">About LTS</a>
           </li>
           <li>
-            <a href="hours.html">Store Hours</a>
+            <a href="/#menu">Our Menu</a>
           </li>
           <li>
             <a href="contact.html">Contact Us</a>
@@ -33,17 +31,28 @@
 
       <figure>
         <img
-          src="img/tacos_and_drink_400x267.png"
+          src="img/tacos_tray_400x267.png"
           alt="Tacos and a drink"
-          title="We love tacos!"
+          title="We love trays of tacos!"
           width="400"
           height="267"
         />
-        <figcaption>Tacos and a drink</figcaption>
+        <figcaption>A Tray of Tasty Tacos</figcaption>
       </figure>
     </header>
     <main>
-      <!-- our content-->
+      <article>
+        <p>We are open 7 days a week!</p>
+        <dl>
+          <dt>Sunday-Thursday</dt>
+          <dd>11am-9pm</dd>
+          <dt>Friday-Saturday</dt>
+          <dd>11am-11pm</dd>
+        </dl>
+      </article>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
     </main>
     <hr />
     <footer>
