--- a/html_course-main/10_lesson_starter/index.html
+++ b/html_course-main/10_lesson_starter/index.html
@@ -13,24 +13,13 @@
     <header>
       <h1>The Little Taco Shop</h1>
       <nav aria-label="Main Navigation">
-        <ul>
-          <li>
-            <a href="#about"
-              >About <abbr title="The Little Taco Shop">LTS</abbr></a
-            >
-          </li>
-          <li>
-            <a href="#menu">Our Menu</a>
-          </li>
-          <li>
-            <a href="hours.html">Store Hours</a>
-          </li>
-          <li>
-            <a href="contact.html">Contact Us</a>
-          </li>
-        </ul>
+        <a href="#about">About <abbr title="The Little Taco Shop">LTS</abbr></a>
+        <a href="#menu">Our Menu</a>
+        <a href="hours.html">Store Hours</a>
+        <a href="contact.html">Contact Us</a>
       </nav>
-
+    </header>
+    <main>
       <figure>
         <img
           src="img/tacos_and_drink_400x267.png"
@@ -41,10 +30,8 @@
         />
         <figcaption>Tacos and a drink</figcaption>
       </figure>
-    </header>
-    <main>
+      <hr />
       <article id="about">
-        <hr />
         <h2>About LTS</h2>
         <p>
           <abbr title="The Little Taco Shop">LTS</abbr> was founded in
